# scenes/battle/battle_results.gd
extends Control
class_name BattleResults

# ============================================================================
# R√âF√âRENCES UI
# ============================================================================

@onready var title_label: Label = $MarginContainer/VBoxContainer/TitleLabel
@onready var winner_label: Label = $MarginContainer/VBoxContainer/WinnerLabel
@onready var fallen_units_container: VBoxContainer = $MarginContainer/VBoxContainer/Panel/MarginContainer/ScrollContainer/FallenUnitsList
@onready var xp_label: Label = $MarginContainer/VBoxContainer/XPLabel
@onready var continue_button: Button = $MarginContainer/VBoxContainer/ContinueButton

# ============================================================================
# DONN√âES
# ============================================================================

var battle_results: Dictionary = {}

# ============================================================================
# INITIALISATION
# ============================================================================

func _ready() -> void:
	# Connecter le bouton
	if continue_button:
		continue_button.pressed.connect(_on_continue_pressed)
	
	# R√©cup√©rer les r√©sultats depuis BattleDataManager ou autre
	# Pour l'instant, on va utiliser des donn√©es de test si non disponibles
	if GameRoot.battle_data_manager.has_battle_data():
		var battle_data = GameRoot.battle_data_manager.get_battle_data()
		battle_results = battle_data.get("results", {})
	
	# Afficher les r√©sultats
	_display_results()

# ============================================================================
# AFFICHAGE
# ============================================================================

func _display_results() -> void:
	"""Affiche tous les r√©sultats du combat"""
	
	# Titre du combat
	var battle_title = battle_results.get("battle_title", "Combat Termin√©")
	if title_label:
		title_label.text = battle_title
	
	# √âquipe gagnante
	var is_victory = battle_results.get("victory", false)
	var winner_team = "L'√âquipe du Joueur" if is_victory else "L'√âquipe Ennemie"
	
	if winner_label:
		winner_label.text = "Vainqueur : " + winner_team
		
		# Colorer selon le r√©sultat
		if is_victory:
			winner_label.add_theme_color_override("font_color", Color(0.3, 1.0, 0.3))  # Vert
		else:
			winner_label.add_theme_color_override("font_color", Color(1.0, 0.3, 0.3))  # Rouge
	
	# Unit√©s tomb√©es au combat
	_display_fallen_units()
	
	# XP gagn√©
	var xp_earned = battle_results.get("xp_earned", 0)
	
	# Si pas de calcul d'XP, inventer un chiffre bas√© sur les stats
	if xp_earned == 0 and is_victory:
		var stats = battle_results.get("stats", {})
		var global_stats = stats.get("global", {})
		var turns = global_stats.get("turns_elapsed", 1)
		var enemies_killed = global_stats.get("units_killed", 0)
		
		# Formule simple : 50 XP de base + 10 par ennemi tu√© + bonus de rapidit√©
		xp_earned = 50 + (enemies_killed * 10)
		
		# Bonus si victoire rapide (moins de 10 tours)
		if turns < 10:
			xp_earned += 50
	
	if xp_label:
		xp_label.text = "XP Gagn√© : " + str(xp_earned)

func _display_fallen_units() -> void:
	"""Affiche la liste des unit√©s tomb√©es au combat"""
	
	if not fallen_units_container:
		return
	
	# Nettoyer le conteneur
	for child in fallen_units_container.get_children():
		child.queue_free()
	
	# R√©cup√©rer les stats des unit√©s
	var stats = battle_results.get("stats", {})
	var unit_summaries = stats.get("units", [])
	
	# Filtrer les unit√©s mortes
	var fallen: Array[Dictionary] = []
	
	for unit_summary in unit_summaries:
		if not unit_summary.get("is_alive", true):
			fallen.append(unit_summary)
	
	# Afficher un message si aucune unit√© n'est tomb√©e
	if fallen.is_empty():
		var no_casualties_label = Label.new()
		no_casualties_label.text = "Aucune perte !"
		no_casualties_label.horizontal_alignment = HORIZONTAL_ALIGNMENT_CENTER
		no_casualties_label.add_theme_font_size_override("font_size", 18)
		no_casualties_label.add_theme_color_override("font_color", Color(0.3, 1.0, 0.3))
		fallen_units_container.add_child(no_casualties_label)
		return
	
	# Cr√©er une entr√©e pour chaque unit√© tomb√©e
	for unit in fallen:
		var unit_entry = _create_fallen_unit_entry(unit)
		fallen_units_container.add_child(unit_entry)

func _create_fallen_unit_entry(unit: Dictionary) -> HBoxContainer:
	"""Cr√©e une entr√©e visuelle pour une unit√© tomb√©e"""
	
	var container = HBoxContainer.new()
	container.custom_minimum_size = Vector2(0, 40)
	
	# Ic√¥ne (skull emoji)
	var icon_label = Label.new()
	icon_label.text = "üíÄ"
	icon_label.custom_minimum_size = Vector2(40, 0)
	container.add_child(icon_label)
	
	# Nom de l'unit√©
	var name_label = Label.new()
	var unit_name = unit.get("name", "Inconnu")
	var is_player = unit.get("is_player", false)
	var team_tag = "[Joueur]" if is_player else "[Ennemi]"
	
	name_label.text = unit_name + " " + team_tag
	name_label.size_flags_horizontal = Control.SIZE_EXPAND_FILL
	
	# Colorer selon l'√©quipe
	if is_player:
		name_label.add_theme_color_override("font_color", Color(0.7, 0.7, 1.0))
	else:
		name_label.add_theme_color_override("font_color", Color(1.0, 0.7, 0.7))
	
	container.add_child(name_label)
	
	# Stats finales (d√©g√¢ts inflig√©s, etc.)
	var stats_label = Label.new()
	var damage_dealt = unit.get("damage_dealt", 0)
	var kills = unit.get("kills", 0)
	
	stats_label.text = "DMG: %d | Kills: %d" % [damage_dealt, kills]
	stats_label.add_theme_font_size_override("font_size", 14)
	stats_label.add_theme_color_override("font_color", Color(0.7, 0.7, 0.7))
	container.add_child(stats_label)
	
	return container

# ============================================================================
# CALLBACKS
# ============================================================================

func _on_continue_pressed() -> void:
	"""Retour √† la carte du monde"""
	GameRoot.event_bus.change_scene(SceneRegistry.SceneID.WORLD_MAP)

# ============================================================================
# SETUP EXTERNE
# ============================================================================

func setup_results(results: Dictionary) -> void:
	"""Configure les r√©sultats depuis l'ext√©rieur"""
	battle_results = results
	
	if is_inside_tree():
		_display_results()
